added endpoint to retrieve full venta details